external-crates/move/crates/move-compiler/tests/move_2024/constants/cross_module_mixed_visibility_chain.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04001]: restricted visibility
   ┌─ tests/move_2024/constants/cross_module_mixed_visibility_chain.move:30:16
   │
19 │ const B: u64 = a::A + 1;
   │       - The constant '0x42::b::B' is internal to its module. Declare it 'public(package)' to allow access from other modules in its package
   ·
30 │ const C: u64 = b::B + 1;
   │                ^^^^ Invalid access of '0x42::b::B'
